# FourierCircles

./: CMakeLists.txt  README.md
.github/workflows/: deploy-pages.yml
src/: FourierCircles.h  TextRenderer.cpp  TextRenderer.h  Vec2.h  fft.h  main.cpp  svg.cpp  svg.h
tools/: CMakeLists.txt  embed_binary.cpp  embed_text.cpp
web/: shell.html
